# histwrapped

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: analysis.rs  export.rs  main.rs  tui.rs  wrapped.rs
src/history/: bash.rs  detect.rs  fish.rs  mod.rs  zsh.rs
