[package]
name = "histwrapped"
version = "0.1.0"
edition = "2021"
description = "Spotify Wrapped for your terminal. See your command-line year in one screenshot."
license = "MIT"
repository = "https://github.com/swemendez/histwrapped"
readme = "README.md"
keywords = ["cli", "shell", "history", "stats", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "histwrapped"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
resvg = "0.44"

[profile.release]
lto = true
strip = true
